--- a/blogs.html
+++ b/blogs.html
@@ -172,7 +172,7 @@
               <li>
                 <a href="#">
                   <span><i class="ri-map-pin-2-fill"></i></span>
-                  123 Main Street<br />Sunrise Valley, Evergreen Heights
+                  130  Black Reef Rd<br />Dinwiddie, Germiston
                 </a>
               </li>
               <li>
