--- a/blogs.html
+++ b/blogs.html
@@ -178,13 +178,13 @@
               <li>
                 <a href="#">
                   <span><i class="ri-phone-fill"></i></span>
-                  +91 9876543210
+                  +27 83 529 0603
                 </a>
               </li>
               <li>
                 <a href="#">
                   <span><i class="ri-mail-fill"></i></span>
-                  info@fitphysique.com
+                  fitphysique@gmail.co.za
                 </a>
               </li>
             </ul>
